hot fixed button alignment, about button, table alignment, scalibility, and hamburger menu. Warren, Jose Muhammed, Grant

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -100,12 +100,11 @@
 	min-width:200px;
 }
 
-.talon-button{
+.bottom-button{
 
   background:#1D3557;
   padding:10px;
   text-decoration:none;
-  margin:0px;
   border-radius:20px;
   text-align:center;
   color: #FFFFFF;
